syntax = "proto3";

package dspb;

import "github.com/chubaodb/chubaodb/proto/basepb/basepb.proto";

enum ExprType {
    Invalid_Expr = 0;

    Column = 1;

    Const_Int     = 2;
    Const_UInt    = 3;
    Const_Double  = 4;  // float or double
    Const_Bytes   = 5;
    Const_Decimal = 6;
    Const_Date    = 7;
    Const_Time    = 8;


    Equal       = 20;
    NotEqual    = 21;
    Less        = 22;
    LessOrEqual      = 23;
    Larger           = 24;
    LargerOrEqual    = 25;

    // Aggregation
    Avg               = 151;
    Count             = 152;
    Max               = 153;
    Min               = 154;
    Sum               = 155;
    Std               = 156;
    Distinct          = 157;

    // Logical Operators
    LogicAnd          = 201;
    LogicOr           = 202;
    LogicNot          = 203;
    LogicXor          = 204;
    UnaryNot          = 205;
    UnaryMinus        = 206;
    IsNull            = 207;
    DecimalIsNull     = 208;
    DateIsNull        = 209;
    RealIsNull        = 210;
    StringIsNull      = 211;
    TimeIsNull        = 212;
    IntIsNull         = 213;
    JsonIsNull        = 214;
    IsNotNull         = 215;
    IsTrue            = 216;
    IsFalse           = 217;
    LeftShift         = 218;
    RightShift        = 219;

    // casting
    CastIntToInt           = 301;
    CastIntToReal          = 302;
    CastIntToString        = 303;
    CastIntToDecimal       = 304;
    CastIntToTime          = 305;
    CastIntToDate          = 306;
    CastIntToJson          = 307;

    CastRealToInt          = 308;
    CastRealToReal         = 309;
    CastRealToString       = 310;
    CastRealToDecimal      = 311;
    CastRealToTime         = 312;
    CastRealToDate         = 313;
    CastRealToJson         = 314;

    CastDecimalToInt       = 315;
    CastDecimalToReal      = 316;
    CastDecimalToString    = 317;
    CastDecimalToDecimal   = 318;
    CastDecimalToTime      = 319;
    CastDecimalToDate      = 320;
    CastDecimalToJson      = 321;

    CastStringToInt        = 322;
    CastStringToReal       = 323;
    CastStringToString     = 324;
    CastStringToDecimal    = 325;
    CastStringToTime       = 326;
    CastStringToDate       = 327;
    CastStringToJson       = 328;

    CastTimeToInt          = 329;
    CastTimeToReal         = 330;
    CastTimeToString       = 331;
    CastTimeToDecimal      = 332;
    CastTimeToTime         = 333;
    CastTimeToDate         = 334;
    CastTimeToJson         = 335;

    CastDateToInt          = 336;
    CastDateToReal         = 337;
    CastDateToString       = 338;
    CastDateToDecimal      = 339;
    CastDateToTime         = 340;
    CastDateToDate         = 341;
    CastDateToJson         = 342;

    CastJsonToInt          = 343;
    CastJsonToReal         = 344;
    CastJsonToString       = 345;
    CastJsonToDecimal      = 346;
    CastJsonToTime         = 347;
    CastJsonToDate         = 348;
    CastJsonToJson         = 349;

    // Comparison Functions and Operators
    Coalesce               = 401;
    EqualInt               = 402;
    EqualReal              = 403;
    EqualString            = 404;
    EqualDecimal           = 405;
    EqualTime              = 406;
    EqualDate              = 407;
    EqualJson              = 408;
    NotEqualInt            = 409;
    NotEqualReal           = 410;
    NotEqualDecimal        = 411;
    NotEqualString         = 412;
    NotEqualTime           = 413;
    NotEqualDate           = 414;
    NotEqualJson           = 415;
    LessInt                = 416;
    LessReal               = 417;
    LessDecimal            = 418;
    LessString             = 419;
    LessTime               = 420;
    LessDate               = 421;
    LessJson               = 422;
    LessOrEqualInt         = 423;
    LessOrEqualReal        = 424;
    LessOrEqualDecimal     = 425;
    LessOrEqualString      = 426;
    LessOrEqualTime        = 427;
    LessOrEqualDate        = 428;
    LessOrEqualJson        = 429;
    GreaterInt             = 430;
    GreaterReal            = 431;
    GreaterDecimal         = 432;
    GreaterString          = 433;
    GreaterTime            = 434;
    GreaterDate            = 435;
    GreaterJson            = 436;
    GreaterOrEqualInt      = 437;
    GreaterOrEqualReal     = 438;
    GreaterOrEqualDecimal  = 439;
    GreaterOrEqualString   = 440;
    GreaterOrEqualTime     = 441;
    GreaterOrEqualDate     = 442;
    GreaterOrEqualJson     = 443;
    Like                   = 444;
    NotLike                = 445;
    RegexpLike             = 446;
    Regexp                 = 447;
    NotRegexp              = 448;
    IN                     = 449;

    // Arithmetic Operator
    Plus              = 551;
    PlusReal          = 552;
    PlusDecimal       = 553;
    PlusInt           = 554;
    Minus             = 561;
    MinusReal         = 562;
    MinusDecimal      = 563;
    MinusInt          = 564;
    Mult              = 571;
    MultReal          = 572;
    MultDecimal       = 573;
    MultInt           = 574;
    MultIntUnsigned   = 575;
    Div               = 581;
    DivReal           = 582;
    DivDecimal        = 583;
    IntDivInt         = 584;
    IntDivDecimal     = 585;
    Mod               = 591;
    ModReal           = 592;
    ModDecimal        = 593;
    ModInt            = 594;

    // Mathematical Functions
    Abs               = 701;
    Ceil              = 702;
    Floor             = 703;
    Round             = 704;
    Rand              = 705;
    Conv              = 706;
    CRC32             = 707;
    Degrees           = 708;
    Exp               = 709;
    Acos              = 710;
    Asin              = 711;
    Atan              = 712;
    Atan2             = 713;
    Cos               = 714;
    Cot               = 715;
    Ln                = 716;
    Log               = 717;
    Log10             = 718;
    Log2              = 719;
    PI                = 720;
    Pow               = 721;
    Radians           = 722;
    Sign              = 723;
    Sin               = 724;
    Sqrt              = 725;
    Tan               = 726;
    Truncate          = 727;

    // control flow functions
    CaseWhen          = 751;
    If                = 752;
    IfInt             = 753;
    IfReal            = 754;
    IfDecimal         = 755;
    IfString          = 756;
    IfTime            = 757;
    IfDate            = 758;
    IfNullJson        = 759;
    IfJson            = 760;
    IfNull            = 761;

    // Encryption and Compression Functions
    Aes_decrypt       = 901;
    Aes_encrypt       = 902;
    Compress          = 903;
    Uncompress        = 904;
    Md5               = 905;
    Password          = 906;
    SHA1              = 907;
    SHA2              = 908;

    // String Comparison Functions and Operators
    Ascii             = 1201;
    Bin               = 1202;
    Bit_length        = 1203;
    Char              = 1204;
    Char_length       = 1205;
    Character_length  = 1206;
    Concat            = 1207;
    Concat_ws         = 1208;
    Elt               = 1209;
    Export_set        = 1210;
    Field             = 1211;
    Find_in_set       = 1212;
    Format            = 1213;
    From_base64       = 1214;
    Hex               = 1215;
    Insert            = 1216;
    Instr             = 1217;
    Lcase             = 1218;
    Left              = 1219;
    Length            = 1220;
    Str_Like          = 1221;
    Load_file         = 1222;
    Locate            = 1223;
    Lower             = 1224;
    Lpad              = 1225;
    Ltrim             = 1226;
    Make_set          = 1227;
    Match             = 1228;
    Mid               = 1229;
    Str_Not_like      = 1230;
    Str_Not_regexp    = 1231;
    Oct               = 1232;
    Octet_length      = 1233;
    Ord               = 1234;
    Position          = 1235;
    Quote             = 1236;
    StrRegexp         = 1237;
    Repeat            = 1238;
    Replace           = 1239;
    Reverse           = 1240;
    Right             = 1241;
    Rlike             = 1242;
    Rpad              = 1243;
    Rtrim             = 1244;
    Soundex           = 1245;
    SoundsLike        = 1246;
    Space             = 1247;
    Strcmp            = 1248;
    Substr            = 1249;
    Substring         = 1250;
    SubstringIndex    = 1251;
    ToBase64          = 1252;
    Trim              = 1253;
    Ucase             = 1254;
    Unhex             = 1255;
    Upper             = 1256;
    WeightString      = 1257;

    // Date and Time Functions
    Adddate           = 2001;
    Addtime           = 2002;
    Convert_tz        = 2003;
    Curdate           = 2004;
    CurrentDate       = 2005;
    CurrentTime       = 2006;
    CurrentTimestamp  = 2007;
    Curtime           = 2008;
    Date              = 2009;
    Date_add          = 2010;
    Date_format       = 2011;
    Date_sub          = 2012;
    Datediff          = 2013;
    Day               = 2014;
    Dayname           = 2015;
    Dayofmonth        = 2016;
    Dayofweek         = 2017;
    Dayofyear         = 2018;
    Extract           = 2019;
    From_days         = 2020;
    From_unixtime     = 2021;
    Get_format        = 2022;
    Hour              = 2023;
    Last_day          = 2024;
    Localtime         = 2025;
    Localtimestamp    = 2026;
    Makedate          = 2027;
    Maketime          = 2028;
    Microsecond       = 2029;
    Minute            = 2030;
    Month             = 2031;
    Monthname         = 2032;
    Now               = 2033;
    Period_add        = 2034;
    Period_diff       = 2035;
    Quarter           = 2036;
    Sec_to_time       = 2037;
    Second            = 2038;
    Str_to_date       = 2039;
    Subdate           = 2040;
    Subtime           = 2041;
    Sysdate           = 2042;
    Time              = 2043;
    Time_format       = 2044;
    Time_to_sec       = 2045;
    Timediff          = 2046;
    Timestamp         = 2047;
    Timestampadd      = 2048;
    Timestampdiff     = 2049;
    To_days           = 2050;
    To_seconds        = 2051;
    Unix_timestamp    = 2052;
    Utc_date          = 2053;
    Utc_time          = 2054;
    Utc_timestamp     = 2055;
    Week              = 2056;
    Weekday           = 2057;
    Weekofyear        = 2058;
    Year              = 2059;
    Yearweek          = 2060;
}

message ColumnInfo {
    uint32          id       = 1;
    basepb.DataType typ      = 2;
    bool            unsigned = 3;
    bytes        reorg_value = 4;
}

message Expr {
    ExprType expr_type      = 1;    // uint32
    ColumnInfo column       = 2;    // left in optimization
    bytes value             = 3;    // maybe left or right, but right in optimization
    repeated Expr child     = 4;    // always 2 expr left and right, but LogicNot
}
